fix(LeaderBoard): prevent wrapping of last column header text in 'skilled' leaderboard

--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
@@ -165,3 +165,7 @@
     width: 78px;
   }
 }
+
+.leaderBoard tbody tr td[data-header="Points per difficulty"]::before {
+  width: max-content;
+}
